<resources>
    <string name="app_name">Calculadora</string>
    <string name="btn_zero">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_clear">CE</string>
    <string name="btn_mult">X</string>
    <string name="btn_sum">+</string>
    <string name="btn_sub">-</string>
    <string name="btn_div">÷</string>
    <string name="btn_equal">=</string>
    <string name="btn_dot">.</string>
    <string name="btn_del">del</string>
    <string name="btn_parenthesis_start">(</string>
    <string name="btn_parenthesis_end">)</string>

</resources>